--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,6 +70,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-core:16.0.+'
     implementation 'com.google.firebase:firebase-auth:16.0.+'
     implementation 'com.google.firebase:firebase-firestore:16.0.+'
+    implementation 'com.google.firebase:firebase-storage:16.0.+'
     implementation 'com.google.android.gms:play-services-auth:16.0.+'
     implementation 'androidx.navigation:navigation-fragment:2.3.0'
     implementation 'androidx.navigation:navigation-ui:2.3.0'
