modul tenda detail

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,8 +17,11 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:replace="android:icon">
-        <activity android:name=".activity.admin.AddTendaActivity"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity android:name=".activity.admin.DetailTendaActivity"
+            android:label="Detail Tenda"></activity>
+        <activity
+            android:name=".activity.admin.AddTendaActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".activity.admin.DetailCateringActivity"
             android:label="Detail Catering" />
