--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,8 +17,13 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:replace="android:icon">
-        <activity android:name=".activity.admin.DetailTendaActivity"
-            android:label="Detail Tenda"></activity>
+        <activity
+            android:name=".activity.pengguna.HomeUserActivity"
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity
+            android:name=".activity.admin.DetailTendaActivity"
+            android:label="Detail Tenda" />
         <activity
             android:name=".activity.admin.AddTendaActivity"
             android:theme="@style/AppTheme.NoActionBar" />
