--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,8 +17,11 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:replace="android:icon">
-        <activity android:name=".activity.MaintenanceActivity"
-            android:label="Under Maintenance"></activity>
+        <activity android:name=".activity.pengguna.DetailPesananActivity"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity
+            android:name=".activity.MaintenanceActivity"
+            android:label="Under Maintenance" />
         <activity
             android:name=".activity.pengguna.KonfirmasiPesanActivity"
             android:theme="@style/AppTheme.NoActionBar" />
