--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Jul 15 18:32:41 ICT 2020
-sdk.dir=C\:\\Users\\Windows\\AppData\\Local\\Android\\Sdk
+#Tue Aug 18 09:37:09 ICT 2020
+sdk.dir=C\:\\Users\\TA Programmer\\AppData\\Local\\Android\\Sdk
