--- a/app/build.gradle
+++ b/app/build.gradle
@@ -78,6 +78,8 @@ dependencies {
     implementation 'androidx.navigation:navigation-ui-ktx:2.3.0'
     //CircelImageView
     implementation 'com.makeramen:roundedimageview:2.3.0'
+    //maps
+    implementation 'com.google.android.gms:play-services-maps:17.0.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
