--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.tapisdev.cateringtenda">
-
     <!--
          The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
          Google Maps Android API v2, but you must specify either coarse or fine
@@ -23,7 +22,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:replace="android:icon">
-
+        <activity android:name=".activity.admin.AddPesananActivity"
+            android:label="Tambah Pesanan"></activity>
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
@@ -38,7 +38,7 @@
 
         <activity
             android:name=".activity.pengguna.LokasiPenyediaActivity"
-            android:label="Lokasi"></activity>
+            android:label="Lokasi" />
         <activity
             android:name=".activity.admin.MapsActivity"
             android:label="Pilih Lokasi Alamat" />
